--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             Hello! I Am <br /><span class="c-orange">Omoseebi Emmanuel</span>
           </h2>
           <p class="text-muted">
-            I'm a UI/UX Designer, Web Developer and Graphics Designer with experience in creating responsive, user-focused 
+            I'm a UI/UX Designer, Web Developer, Graphics Designer, and Quality Assurance Engineer with experience in creating responsive, user-focused 
             digital products. <br> <br> My background combines creative design, front-end development, and software testing—ensuring that the solutions I build are both visually compelling and functionally reliable.
           </p>
         <br>  <a href="https://wa.link/7xa6x1" 
